# CasAI_Provenance-Lab

./: .gitignore  CLAUDE.md  README.md  RULES.md  package.json  render.yaml  tsconfig.base.json  turbo.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: db.py  main.py
apps/api/app/api/routes/: provenance.py  rag.py  research_objects.py  results.py  runs.py
apps/api/app/core/: config.py
apps/api/app/modules/provenance/: service.py
apps/api/app/modules/rag/: service.py
apps/api/app/modules/research_objects/: fasta.py  service.py
apps/api/app/schemas/: provenance.py  rag.py  research_objects.py  results.py  runs.py
apps/api/migrations/: 001_init.sql  002_phase1_schema.sql  003_match_vault_chunks.sql  004_vault_chunks_add_columns.sql  005_match_vault_chunks.sql
apps/api/scripts/: backfill_embeddings.py  embed_vault_chunks.py  ingest_vault.py
apps/api/tests/: test_engine.py  test_fasta.py  test_rag_ask.py  test_rag_threshold.py  test_runs.py  test_spec.py
apps/api/vault/: INDEX-SOURCES.md
apps/api/vault/crops/: cotton.md  maize.md  potato.md  rice.md  soybean.md  tomato.md  wheat.md
apps/api/vault/regulators/: efsa.md  epa.md  fda.md  usda-aphis.md
apps/api/vault/resources/: editing-tools.md  genome-databases.md  germplasm-banks.md  journals.md  literature-databases.md  organizations.md  patents-ip.md  protocols-methods.md  regulatory.md
apps/api/vault/sources/: starter-ncbi-gene.md
apps/api/vault/techniques/: base-editing.md  crispr.md
apps/api/vault/topics/: field-trials.md  herbicide-tolerance.md
docs/: architecture.md  setup.md  (+1 more)
(+55 files in other folders)
