[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casai-provenance-lab-api"
version = "0.1.0"
description = "FastAPI backend for CasAI Provenance Lab"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "supabase>=2.0.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.11.5,<1.0.0"
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

